fix(plot-extractor): add flex-shrink 0 to canvas wrapper to prevent flexbox from squishing the scaled image width

--- a/tools/plot-extractor/style.css
+++ b/tools/plot-extractor/style.css
@@ -88,6 +88,7 @@ main {
   overflow: hidden;
   width: fit-content;
   height: fit-content;
+  flex-shrink: 0;
 }
 
 #plot-image {
